0.01  2015-05-29
  - initial release of Catmandu::MediaWiki