@@ -1,2 +1,6 @@
+Revision history for Catmandu::MediaWiki
+
+{{$NEXT}}
+
 0.01  2015-05-29
   - initial release of Catmandu::MediaWiki
